.opsera-simpson/k8s/overlays/staging/services-bluegreen.yaml
apiVersion: v1
kind: Service
metadata:
  name: simpson-active
  namespace: opsera-simpson-staging
  labels:
    app: simpson
    tenant: opsera
    environment: staging
    service-type: active
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 80
      targetPort: 8080
      protocol: TCP
  selector:
    app: simpson
---
apiVersion: v1
kind: Service
metadata:
  name: simpson-preview
  namespace: opsera-simpson-staging
  labels:
    app: simpson
    tenant: opsera
    environment: staging
    service-type: preview
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 80
      targetPort: 8080
      protocol: TCP
  selector:
    app: simpson
---
apiVersion: v1
kind: Service
metadata:
  name: simpson
  namespace: opsera-simpson-staging
  labels:
    app: simpson
    tenant: opsera
    environment: staging
    service-type: root
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 80
      targetPort: 8080
      protocol: TCP
  selector:
    app: simpson
